--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "string": "^3.3.0"
   },
   "name": "boilerplatify",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A boilerplate for my projects",
   "main": "boilerplatify.js",
   "repository": {
@@ -21,5 +21,6 @@
   "keywords": [
     "boilerplate",
     "utility"
-  ]
+  ],
+  "bin": "boilerplatify.js"
 }
