--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/omphalos/boilerplatify",
   "scripts": {
     "lint": "./node_modules/.bin/minilint",
-    "test": "./node_modules/.bin/istanbul ./tests.js",
+    "test": "./node_modules/.bin/istanbul cover ./tests.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "watch": "./node_modules/.bin/nodemon ./tests.js",
     "release": "npm run test; ./node_modules/.bin/bumpt",
