--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "./node_modules/.bin/istanbul cover ./tests.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "watch": "./node_modules/.bin/nodemon ./tests.js",
-    "release": "npm run test; ./node_modules/.bin/bumpt",
+    "release": "npm run test && ./node_modules/.bin/bumpt",
     "tape": "./node_modules/.bin/tape ./tests.js"
   },
   "keywords": [
