--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "watch": "./node_modules/.bin/nodemon ./tests.js",
     "release": "npm run test && ./node_modules/.bin/bumpt",
-    "tape": "./node_modules/.bin/tape ./tests.js"
+    "tape": "./node_modules/.bin/tape ./tests.js",
+    "cover": "./node_modules/.bin/istanbul cover ./tests.js"
   },
   "keywords": [
     "boilerplate",
